saving to github

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     </p>
                     <p>
                         <span>Interest</span>
-                        <span>Esports, Traveling, Music</span>
+                        <span>Esports, Traveling</span>
 
                     </p>
 
