--- a/index.html
+++ b/index.html
@@ -64,17 +64,17 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="https://twitter.com/PiyushP78689319">
                             <i class="fa fa-twitter"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="https://www.instagram.com/p1yush__/">
                             <i class="fa fa-instagram"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="https://github.com/p1yush123">
                             <i class="fa fa-github"></i>
                         </a>
                     </li>
@@ -89,7 +89,9 @@
                     <p>I graduated as a Mechanical Engineer from Dr. A.P.J Abdul Kalam Technical University.
                         Seeking a career change with an entry-level position to pursue my passion for Web Development.
                         </p>
-                    <button>Download CV</button>
+                    <a href="https://drive.google.com/file/d/1ItbmXuqtt7r4c0XTOLRtOWS5OwSVp96P/view?usp=sharing">
+                        <button>Download CV</button>
+                    </a>
 
                 </div>
                 <div class="right">
