--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                     <i class="fa fa-bolt"></i>
                 </div>
                 <div>
-                    <h3><span class="counter" data-count="1500">1500</span>+</h3>
+                    <h3><span class="counter" data-count="25">25</span>+</h3>
                     <h5>Completed Projects</h5>
                 </div>
             </div>
@@ -231,8 +231,8 @@
                     <i class="fa fa-smile-o"></i>
                 </div>
                 <div>
-                    <h3><span class="counter" data-count="1600">1600</span>+</h3>
-                    <h5>Happy Clients</h5>
+                    <h3><span class="counter" data-count="50">50</span>+</h3>
+                    <h5>Happy Viewers</h5>
                 </div>
             </div>
             <div>
@@ -240,8 +240,8 @@
                     <i class="fa fa-trophy"></i>
                 </div>
                 <div>
-                    <h3><span class="counter" data-count="200">200</span>+</h3>
-                    <h5>Awards recieved</h5>
+                    <h3><span class="counter" data-count="40">40</span>+</h3>
+                    <h5>Appreciations recieved</h5>
                 </div>
             </div>
             
