--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             </div>
             <div>
                 <div>
-                    <i class="fa fa-trophy"></i>
+                    <i class="fa fa-code"></i>
                 </div>
                 <div>
                     <h3><span class="counter" data-count="800">800</span>+</h3>
