--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <p>I graduated as a Mechanical Engineer from Dr. A.P.J Abdul Kalam Technical University.
                         Seeking a career change with an entry-level position to pursue my passion for Web Development.
                         </p>
-                    <a href="https://drive.google.com/file/d/1ItbmXuqtt7r4c0XTOLRtOWS5OwSVp96P/view?usp=sharing">
+                    <a href="https://drive.google.com/file/d/1XCVn3IWC2Q4CEoiInQYKuF-7QoHrQ8JL/view?usp=sharing">
                         <button>Download CV</button>
                     </a>
 
@@ -276,7 +276,7 @@
                             <h3>Weather App</h3>
                             <p>Buil a fully functional Weather App with the help of 'open weather map' API using React.js,HTML,CSS & JavaScript.
                             </p>
-                            <a href="https://p1yush123.github.io/weather-react/">
+                            <a href="https://p1yush123.github.io/Weather-App/">
                                 <i class="fa fa-github"></i>
                             </a>
                         </div>
