--- a/index.html
+++ b/index.html
@@ -262,9 +262,9 @@
                         <div class="slide">
                             
                             <h3>Analog Clock</h3>
-                            <p>Build a fully functional Clean and attractive analog clock with pure HTML, CSS. 
+                            <p>Build an online Music Player using HTML, CSS & JavaScript. 
                             </p>
-                            <a href="https://p1yush123.github.io/clock/">
+                            <a href="https://p1yush123.github.io/Music-Player/">
                                 <i class="fa fa-github"></i>
                             </a>
                         </div>
