--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                         </div>
                         <div class="slide">
                             
-                            <h3>Analog Clock</h3>
+                            <h3>Music Player</h3>
                             <p>Build an online Music Player using HTML, CSS & JavaScript. 
                             </p>
                             <a href="https://p1yush123.github.io/Music-Player/">
